--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
 
 .Main {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   height: 60vh;
@@ -13,6 +14,7 @@
 
 h1 {
   font-size: 50px;
+  margin-bottom: 20px;
 }
 
 .butt {
