--- a/src/App.css
+++ b/src/App.css
@@ -64,4 +64,7 @@ input {
   border: none;
   align-items: center;
   text-align: center;
+  width: 15vh;
+  height: 5vh;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1), 0 1px 3px rgba(0, 0, 0, 0.08);
 }
